--- a/index.html
+++ b/index.html
@@ -1,11 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Flower Shop</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <header>
+      <div class="header-container">
+        <div class="header-left-side">
+          <h1 class="header-title">
+            Let's make<br />beautiful flowers a<br />part of your life.
+          </h1>
+          <p class="header-desc">
+            It is a long established fact that a reader will be distracted by
+            the readable content of a page when looking at its layout. The point
+            of using Lorem Ipsum is that it has a more-or-less normal
+            distribution of letters.
+          </p>
+          <button class="btn header-btn">Shop Now</button>
+        </div>
+        <div class="header-right-side">
+          <img class="header-img" src="assets/pngwing 10.png" alt="" />
+        </div>
+      </div>
+      <div class="rectangle-container">
+        <h2 class="rectangle-title">Our Featured Flowers</h2>
+        <p class="rectangle-desc">
+          It is a long established fact that a reader will be distracted by the
+          readable<br />content of a page when looking at its layout.
+        </p>
+        <div class="rec-container">
+          <div class="rectangle">
+            <img class="rectangle-img" src="assets/pngwing 6.png" alt="" />
+            <h3>Pink Flower Tree</h3>
+          </div>
+          <div class="rectangle1">
+            <img class="rectangle-img1" src="assets/pngwing 5.png" alt="" />
+            <h3>Pink Flower Tree</h3>
+          </div>
+          <div class="rectangle2">
+            <img class="rectangle-img" src="assets/pngwing 7.png" alt="" />
+            <h3>Pink Flower Tree</h3>
+          </div>
+        </div>
+      </div>
+      
+      <div class="header-banner-container">
+
+      </div>
+    </header>
+    <main></main>
+    <footer></footer>
+  </body>
 </html>
