--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
           </p>
           <button class="btn header-btn">Shop Now</button>
         </div>
+
         <div class="header-right-side">
           <img class="header-img" src="assets/pngwing 10.png" alt="" />
         </div>
@@ -53,10 +54,8 @@
           </div>
         </div>
       </div>
-      
-      <div class="header-banner-container">
 
-      </div>
+      <div class="header-banner-container"></div>
     </header>
     <main></main>
     <footer></footer>
