3rd banner done

--- a/index.html
+++ b/index.html
@@ -53,11 +53,40 @@
             <h3>Pink Flower Tree</h3>
           </div>
         </div>
+
+        <div class="service-container">
+          <div class="services">
+            <img class="ser-img" src="assets/Group 57.png" alt="" />
+            <h4 ser-title>Same Day Delivery. Click & Collect.</h4>
+          </div>
+
+          <div class="services">
+            <img class="ser-img" src="assets/Group 58.png" alt="" />
+            <h4 ser-title>Fresh Flowers. Local Growers.</h4>
+          </div>
+
+          <div class="services">
+            <img class="ser-img" src="assets/Group 59.png" alt="" />
+            <h4 ser-title>24/7 Free Support.</h4>
+          </div>
+        </div>
+      </div>
+    </header>
+    <main>
+      <div class="banner-container">
+        <div class="banner-container-left">
+          <h1>Hot Deal ! Sale Up To 25% <span style="color: rgba(229, 84, 115, 1);">Off</span></h1>
+          <p>
+            It is a long established fact that a reader will be distracted by the readable<br>content of a page when looking at its layout.
+          </p>
+          <button class="btn">Sign Up</button>
+        </div>
+        <div class="banner-container-right">
+            <img src="assets/pngwing 8.png" alt="">
+        </div>
       </div>
 
-      <div class="header-banner-container"></div>
-    </header>
-    <main></main>
+    </main>
     <footer></footer>
   </body>
 </html>
