portfolio pic done

--- a/index.html
+++ b/index.html
@@ -75,17 +75,35 @@
     <main>
       <div class="banner-container">
         <div class="banner-container-left">
-          <h1>Hot Deal ! Sale Up To 25% <span style="color: rgba(229, 84, 115, 1);">Off</span></h1>
+          <h1>
+            Hot Deal ! Sale Up To 25%
+            <span style="color: rgba(229, 84, 115, 1)">Off</span>
+          </h1>
           <p>
-            It is a long established fact that a reader will be distracted by the readable<br>content of a page when looking at its layout.
+            It is a long established fact that a reader will be distracted by
+            the readable<br />content of a page when looking at its layout.
           </p>
           <button class="btn">Sign Up</button>
         </div>
         <div class="banner-container-right">
-            <img src="assets/pngwing 8.png" alt="">
+          <img src="assets/pngwing 8.png" alt="" />
         </div>
       </div>
-
+      <div class="portfolio-container">
+        <h1>Instagram</h1>
+        <p>
+          It is a long established fact that a reader will be distracted by the readable<br>content of a page when looking at its layout.
+        </p>
+        <div class="portfolio-pic">
+          <div class="portfolio-pic1"><img src="assets/Flower 01.png" alt=""></div>
+          <div class="portfolio-pic2"><img src="assets/Rectangle 4.png" alt=""></div>
+          <div class="portfolio-pic3"><img src="assets/Rectangle 5.png" alt=""></div>
+          <div class="portfolio-pic4"><img src="assets/Rectangle 6.png" alt=""></div>
+        </div>
+        <div class="portfolio-ad">
+          
+        </div>
+      </div>
     </main>
     <footer></footer>
   </body>
