project almost finished

--- a/index.html
+++ b/index.html
@@ -92,16 +92,43 @@
       <div class="portfolio-container">
         <h1>Instagram</h1>
         <p>
-          It is a long established fact that a reader will be distracted by the readable<br>content of a page when looking at its layout.
+          It is a long established fact that a reader will be distracted by the
+          readable<br />content of a page when looking at its layout.
         </p>
         <div class="portfolio-pic">
-          <div class="portfolio-pic1"><img src="assets/Flower 01.png" alt=""></div>
-          <div class="portfolio-pic2"><img src="assets/Rectangle 4.png" alt=""></div>
-          <div class="portfolio-pic3"><img src="assets/Rectangle 5.png" alt=""></div>
-          <div class="portfolio-pic4"><img src="assets/Rectangle 6.png" alt=""></div>
+          <div class="portfolio-pic1">
+            <img src="assets/Flower 01.png" alt="" />
+          </div>
+          <div class="portfolio-pic2">
+            <img src="assets/Rectangle 4.png" alt="" />
+          </div>
+          <div class="portfolio-pic3">
+            <img src="assets/Rectangle 5.png" alt="" />
+          </div>
+          <div class="portfolio-pic4">
+            <img src="assets/Rectangle 6.png" alt="" />
+          </div>
         </div>
         <div class="portfolio-ad">
-          
+          <div class="ad-info">
+            <h1>Get The Latest Deals</h1>
+            <p>$30 coupon for first shopping</p>
+          </div>
+          <div class="ad-input">
+            <div class="input-box">
+              <label for="email">
+                <input
+                  class="email"
+                  id="email"
+                  placeholder="Enter your email here...."
+                  type="email"
+                />
+              </label>
+            </div>
+            <div class="button-box">
+              <button class="btn">Subscribe</button>
+            </div>
+          </div>
         </div>
       </div>
     </main>
