--- a/index.html
+++ b/index.html
@@ -132,6 +132,18 @@
         </div>
       </div>
     </main>
-    <footer></footer>
+    <footer>
+      <div class="footer-container">
+        <h1>Flower<span style="color: rgba(255, 255, 255, 1)">Shop</span></h1>
+        <p>
+          It is a long established fact that a reader will be distracted by the
+          readable<br />content of a page when looking at its layout.
+          <br /><br />
+          <span style="color: rgba(255, 255, 255, 0.4); font-size: 16px"
+            >&copy; FlowerShop.com. All rights reserved.
+          </span>
+        </p>
+      </div>
+    </footer>
   </body>
 </html>
