--- a/index.html
+++ b/index.html
@@ -1,149 +1,171 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Flower Shop</title>
 
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <header>
-      <div class="header-container">
-        <div class="header-left-side">
-          <h1 class="header-title">
-            Let's make<br />beautiful flowers a<br />part of your life.
-          </h1>
-          <p class="header-desc">
-            It is a long established fact that a reader will be distracted by
-            the readable content of a page when looking at its layout. The point
-            of using Lorem Ipsum is that it has a more-or-less normal
-            distribution of letters.
-          </p>
-          <button class="btn header-btn">Shop Now</button>
-        </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Flower Shop</title>
 
-        <div class="header-right-side">
-          <img class="header-img" src="assets/pngwing 10.png" alt="" />
-        </div>
-      </div>
-      <div class="rectangle-container">
-        <h2 class="rectangle-title">Our Featured Flowers</h2>
-        <p class="rectangle-desc">
-          It is a long established fact that a reader will be distracted by the
-          readable<br />content of a page when looking at its layout.
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="style.css" />
+</head>
+
+<body>
+  <header>
+    <div class="header-container">
+      <div class="header-left-side">
+        <h1 class="header-title">
+          Let's make<br />beautiful flowers a<br />part of your life.
+        </h1>
+        <p class="header-desc">
+          It is a long established fact that a reader will be distracted by
+          the readable content of a page when looking at its layout. The point
+          of using Lorem Ipsum is that it has a more-or-less normal
+          distribution of letters.
         </p>
-        <div class="rec-container">
-          <div class="rectangle">
-            <img class="rectangle-img" src="assets/pngwing 6.png" alt="" />
-            <h3>Pink Flower Tree</h3>
-          </div>
-          <div class="rectangle1">
-            <img class="rectangle-img1" src="assets/pngwing 5.png" alt="" />
-            <h3>Pink Flower Tree</h3>
-          </div>
-          <div class="rectangle2">
-            <img class="rectangle-img" src="assets/pngwing 7.png" alt="" />
-            <h3>Pink Flower Tree</h3>
-          </div>
+        <button class="btn header-btn">Shop Now</button>
+      </div>
+
+      <div class="header-right-side">
+        <img class="header-img" src="assets/pngwing 10.png" alt="" />
+      </div>
+    </div>
+    <div class="rectangle-container">
+      <h2 class="rectangle-title">Our Featured Flowers</h2>
+      <p class="rectangle-desc">
+        It is a long established fact that a reader will be distracted by the
+        readable<br />content of a page when looking at its layout.
+      </p>
+      <div class="rec-container">
+        <div class="rectangle">
+          <img class="rectangle-img rectangular-imgs" src="assets/pngwing 6.png" alt="" />
+          <h3>Pink Flower Tree</h3>
         </div>
-
-        <div class="service-container">
-          <div class="services">
-            <img class="ser-img" src="assets/Group 57.png" alt="" />
-            <h4 ser-title>Same Day Delivery. Click & Collect.</h4>
-          </div>
-
-          <div class="services">
-            <img class="ser-img" src="assets/Group 58.png" alt="" />
-            <h4 ser-title>Fresh Flowers. Local Growers.</h4>
-          </div>
-
-          <div class="services">
-            <img class="ser-img" src="assets/Group 59.png" alt="" />
-            <h4 ser-title>24/7 Free Support.</h4>
-          </div>
+        <div class="rectangle1">
+          <img class="rectangle-img1 rectangular-imgs" src="assets/pngwing 5.png" alt="" />
+          <h3>Pink Flower Tree</h3>
+        </div>
+        <div class="rectangle2">
+          <img class="rectangle-img rectangular-imgs" src="assets/pngwing 7.png" alt="" />
+          <h3>Pink Flower Tree</h3>
         </div>
       </div>
-    </header>
-    <main>
-      <div class="banner-container">
-        <div class="banner-container-left">
-          <h1>
-            Hot Deal ! Sale Up To 25%
-            <span style="color: rgba(229, 84, 115, 1)">Off</span>
-          </h1>
-          <p>
-            It is a long established fact that a reader will be distracted by
-            the readable<br />content of a page when looking at its layout.
-          </p>
-          <button class="btn">Sign Up</button>
+
+      <div class="service-container">
+        <div class="services">
+          <img class="ser-img" src="assets/Group 57.png" alt="" />
+          <h4 ser-title>Same Day Delivery. Click & Collect.</h4>
         </div>
-        <div class="banner-container-right">
-          <img src="assets/pngwing 8.png" alt="" />
+
+        <div class="services">
+          <img class="ser-img" src="assets/Group 58.png" alt="" />
+          <h4 ser-title>Fresh Flowers. Local Growers.</h4>
+        </div>
+
+        <div class="services">
+          <img class="ser-img" src="assets/Group 59.png" alt="" />
+          <h4 ser-title>24/7 Free Support.</h4>
         </div>
       </div>
-      <div class="portfolio-container">
-        <h1>Instagram</h1>
+    </div>
+  </header>
+  <main>
+    <div class="banner-container">
+      <div class="banner-container-left">
+        <h1>
+          Hot Deal ! Sale Up To 25%
+          <span style="color: rgba(229, 84, 115, 1)">Off</span>
+        </h1>
         <p>
-          It is a long established fact that a reader will be distracted by the
-          readable<br />content of a page when looking at its layout.
+          It is a long established fact that a reader will be distracted by
+          the readable<br />content of a page when looking at its layout.
         </p>
-        <div class="portfolio-pic">
-          <div class="portfolio-pic1">
-            <img src="assets/Flower 01.png" alt="" />
-          </div>
-          <div class="portfolio-pic2">
-            <img src="assets/Rectangle 4.png" alt="" />
-          </div>
-          <div class="portfolio-pic3">
-            <img src="assets/Rectangle 5.png" alt="" />
-          </div>
-          <div class="portfolio-pic4">
-            <img src="assets/Rectangle 6.png" alt="" />
-          </div>
+        <button class="btn">Sign Up</button>
+      </div>
+      <div class="banner-container-right">
+        <img src="assets/pngwing 8.png" alt="" />
+      </div>
+    </div>
+    <div class="portfolio-container">
+      <h1>Instagram</h1>
+      <p>
+        It is a long established fact that a reader will be distracted by the
+        readable<br />content of a page when looking at its layout.
+      </p>
+      <div class="portfolio-pic">
+        <div class="portfolio-pic1">
+          <img src="assets/Flower 01.png" alt="" />
         </div>
-        <div class="portfolio-ad">
-          <div class="ad-info">
-            <h1>Get The Latest Deals</h1>
-            <p>$30 coupon for first shopping</p>
+        <div class="portfolio-pic2">
+          <img src="assets/Rectangle 4.png" alt="" />
+        </div>
+        <div class="portfolio-pic3">
+          <img src="assets/Rectangle 5.png" alt="" />
+        </div>
+        <div class="portfolio-pic4">
+          <img src="assets/Rectangle 6.png" alt="" />
+        </div>
+      </div>
+
+      <div class="portfolio-ad">
+        <div class="ad-info">
+          <h1>Get The Latest Deals</h1>
+          <p>$30 coupon for first shopping</p>
+        </div>
+        <div class="ad-input">
+          <div class="input-box">
+            <label for="email">
+              <input class="email" id="email" placeholder="Enter your email here...." type="email" />
+            </label>
           </div>
-          <div class="ad-input">
-            <div class="input-box">
-              <label for="email">
-                <input
-                  class="email"
-                  id="email"
-                  placeholder="Enter your email here...."
-                  type="email"
-                />
-              </label>
-            </div>
-            <div class="button-box">
-              <button class="btn">Subscribe</button>
-            </div>
+          <div class="button-box">
+            <button class="btn">Subscribe</button>
           </div>
         </div>
       </div>
-    </main>
-    <footer>
-      <div class="footer-container">
-        <h1>Flower<span style="color: rgba(255, 255, 255, 1)">Shop</span></h1>
-        <p>
-          It is a long established fact that a reader will be distracted by the
-          readable<br />content of a page when looking at its layout.
-          <br /><br />
-          <span style="color: rgba(255, 255, 255, 0.4); font-size: 16px"
-            >&copy; FlowerShop.com. All rights reserved.
-          </span>
-        </p>
+    </div>
+    <div class="premium-collection">
+      <div class="premium-collection-content">
+           <h1 class="premium-collection-title">Our Premium Collection</h1>
+           <p class="premium-collection-paragraph">The most premium collection from us </p>
+         
+      
       </div>
-    </footer>
-  </body>
+      <div class="premium-collection-images">
+          <div class="premium-collection-img">
+              <img src="/assets/grace.png" alt="" class="premium-collection-img-1 premium-img">
+              <h3 class="premium-img-title">Exotic Grace</h3>
+          </div>
+          <div class="premium-collection-img">
+              <img src="/assets/color.png" alt="" class="premium-collection-img-2 premium-img ">
+              <h3 class="premium-img-title">Colour Carnival</h3>
+          </div>
+          <div class="premium-collection-img">
+              <img src="/assets/cherry.png" alt="" class="premium-collection-img-3 premium-img ">
+              <h3 class="premium-img-title">Cherry Bomb</h3>
+          </div>
+          <div class="premium-collection-img">
+              <img src="/assets/love.png" alt="" class="premium-collection-img-4 premium-img ">
+              <h3 class="premium-img-title">
+                  Circle of Love</h3>
+          </div>
+      </div>
+  </div>
+  </main>
+  <footer>
+    <div class="footer-container">
+      <h1>Flower<span style="color: rgba(255, 255, 255, 1)">Shop</span></h1>
+      <p>
+        It is a long established fact that a reader will be distracted by the
+        readable<br />content of a page when looking at its layout.
+        <br /><br />
+        <span style="color: rgba(255, 255, 255, 0.4); font-size: 16px">&copy; FlowerShop.com. All rights reserved.
+        </span>
+      </p>
+    </div>
+  </footer>
+</body>
+
 </html>
