--- a/index.html
+++ b/index.html
@@ -135,19 +135,19 @@
       </div>
       <div class="premium-collection-images">
           <div class="premium-collection-img">
-              <img src="/assets/grace.png" alt="" class="premium-collection-img-1 premium-img">
+              <img src="assets/grace.png" alt="" class="premium-collection-img-1 premium-img">
               <h3 class="premium-img-title">Exotic Grace</h3>
           </div>
           <div class="premium-collection-img">
-              <img src="/assets/color.png" alt="" class="premium-collection-img-2 premium-img ">
+              <img src="assets/color.png" alt="" class="premium-collection-img-2 premium-img ">
               <h3 class="premium-img-title">Colour Carnival</h3>
           </div>
           <div class="premium-collection-img">
-              <img src="/assets/cherry.png" alt="" class="premium-collection-img-3 premium-img ">
+              <img src="assets/cherry.png" alt="" class="premium-collection-img-3 premium-img ">
               <h3 class="premium-img-title">Cherry Bomb</h3>
           </div>
           <div class="premium-collection-img">
-              <img src="/assets/love.png" alt="" class="premium-collection-img-4 premium-img ">
+              <img src="assets/love.png" alt="" class="premium-collection-img-4 premium-img ">
               <h3 class="premium-img-title">
                   Circle of Love</h3>
           </div>
